[package]
name = "rentnotice-pro"
version = "1.1.1"
description = "RentNotice Pro — California 3-Day Pay or Quit notice preparation suite"
authors = ["RentNotice Pro"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the library name distinct from the binary name so the
# desktop and (future) mobile entry points can share the same runner.
name = "rentnotice_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTE: the auto-updater (tauri-plugin-updater) is intentionally NOT included
# in v1 — installed apps must never phone home to a placeholder endpoint.
# See BUILDING.md §4 for how to re-enable it with real signing keys.

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
